--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,5 +1,5 @@
 .header-border {
-  margin: 2% 5% 4%;
+  background-color: #5889e5;
 }
 
 .wrapper {
@@ -7,7 +7,8 @@
   align-items: center;
   justify-content: space-between;
   background-color: #4369b2;
-  margin: 1% 8%;
+  padding: 3% 8%;
+  
 }
 
 .pageTitle {
@@ -27,9 +28,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 2% 20%;
   position: relative;
-  margin-top: 8%;
+  margin-top: 10%;
+  padding-bottom: 12%;
 }
 
 .searchInput {
