--- a/src/index.css
+++ b/src/index.css
@@ -10,13 +10,24 @@ body {
   color: #fff;
 }
 
-:is(h1, h2, h3, ul, li, p) {
+:is(h1, h2, h3, h4, ul, li, p) {
   margin: 0;
   padding: 0;
 }
 
 h2 {
   padding: 20px 0;
+}
+
+.go-back {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  width: 100%;
+  color: #fff;
+  background-color: #35548b;
 }
 
 li {
