--- a/src/components/PopularLocations/PopularLocations.css
+++ b/src/components/PopularLocations/PopularLocations.css
@@ -19,6 +19,8 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
+  gap:10px;
+  margin: 2% 0;
 }
 
 .location-button {
@@ -28,10 +30,29 @@
   font-weight: 700;
   cursor: pointer;
   width: 100%;
-  height: 20vh;
+  height: 15vh;
   word-wrap: break-word;
+  border-radius: 10px;
 }
 
 .location-button:hover {
-  background-color: #4369b2;
+  background-color: #092558;
+}
+
+@media screen and (min-width: 550px) {
+  .location-grid {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .location-button {
+    padding: 10px 15px;
+    font-size: 20px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .location-grid {
+    grid-template-columns: repeat(5, 1fr);
+  }
 }
