Update details layout, and fix api issue

--- a/src/components/Layouts/DetailsLayout.css
+++ b/src/components/Layouts/DetailsLayout.css
@@ -1,8 +1,8 @@
 .selected {
   font-size: 18px;
   background-color: #35548b;
-  width: 100%;
-  padding: 2%;
+  width: 100vw;
+  padding: 2% 0;
   text-transform: uppercase;
   text-align: center;
 }
